Avoid overlapping in remove icon click

--- a/src/woocommerce/widgets/cart/style.css
+++ b/src/woocommerce/widgets/cart/style.css
@@ -28,7 +28,7 @@
 			color: var(--general-text);
 
 			&:not(.remove) {
-				padding-right: 16px;
+				margin-right: 16px;
 
 				:--active {
 					color: var(--general-text-alt);
@@ -59,7 +59,7 @@
 		}
 	}
 
-	.attachment-woocommerce_thumbnail {
+	img {
 		position: absolute 0 null null 0;
 		max-width: 65px;
 		left: 0;
@@ -86,7 +86,6 @@
 		margin-bottom: 0;
 
 		.button {
-			margin: 0;
 			min-height: 36px;
 			font-size: calc(var(--general-small) * 6/7);
 			padding: 0 15px;
